# Self-Driving-Cars

./: README.md
CarND-Advanced-Lane-Lines/: Advanced-lane-detection-pipeline.ipynb  P4-writeup.md  P4_writeup.md  README.md  utils.py  video_lane_detection.py
CarND-Behavioral-Cloning-P3/: P3-writeup.md  README.md  drive.py  model-img-augmentation-demo.ipynb  model-training.ipynb  model.py  model_history  test_model.h5  util.py
CarND-Behavioral-Cloning-P3/.ipynb_checkpoints/: model-img-augmentation-demo-checkpoint.ipynb  model-training-checkpoint.ipynb
CarND-Extended-Kalman-Filter-Project/: install-ubuntu.sh
CarND-Kidnapped-Vehicle-Project/: CMakeLists.txt
CarND-Kidnapped-Vehicle-Project/src/: main.cpp  particle_filter.cpp  particle_filter.h
CarND-LaneLines-P1/: P1-v1.ipynb  P1.ipynb  README.md
CarND-LaneLines-P1/.ipynb_checkpoints/: P1-checkpoint.ipynb  P1-simple-lane-line-detection-blog-checkpoint.ipynb
CarND-MPC-Project/: CMakeLists.txt  README.md  cmakepatch.txt
CarND-MPC-Project/src/: MPC.cpp  MPC.h  main.cpp  matplotlibcpp.h
CarND-PID-Control-Project/: README.md
CarND-PID-Control-Project/src/: CMakeLists.txt  PID.cpp  PID.h  main.cpp
CarND-Traffic-Sign-Classifier-Project/: P2-writeup.md  ReadMe.md  Readme.md.md  Traffic_Sign_Classifier.ipynb  figures.pptx
CarND-Vehicle-Detection/: P5-writeup.md  README.md  heat.py  lane_detection_utils.py  line.py  svm-classifier-training-gridsearch.py  svm-classifier-training.py  svm-classifier-training.py~  utils.py  utils.py~  vehicle detection pipeline.ipynb  vehicle_detection_utils.py  video_detection.py
(+18 files in other folders)
